projects/batfish/src/test/resources/org/batfish/representation/aws/test-public-private-subnet/aws_configs/CustomerGateways.json
{
 "CustomerGateways": [
  {
   "BgpAsn": "65000",
   "CustomerGatewayId": "cgw-0e0d620a3ae284684",
   "IpAddress": "1.1.1.1",
   "State": "available",
   "Tags": [],
   "Type": "ipsec.1"
  }
 ]
}
