projects/batfish/src/test/resources/org/batfish/representation/aws/test-public-private-subnet/aws_configs/InternetGateways.json
{
 "InternetGateways": [
  {
   "Attachments": [
    {
     "State": "available",
     "VpcId": "vpc-0b966fdeb36d5e43f"
    }
   ],
   "InternetGatewayId": "igw-0eac198308206c358",
   "OwnerId": "554773406868",
   "Tags": []
  }
 ]
}
