projects/batfish/src/test/resources/org/batfish/representation/aws/test-public-private-subnet/aws_configs/VpnGateways.json
{
 "VpnGateways": [
  {
   "AmazonSideAsn": 64512,
   "State": "available",
   "Tags": [],
   "Type": "ipsec.1",
   "VpcAttachments": [
    {
     "State": "attached",
     "VpcId": "vpc-0b966fdeb36d5e43f"
    }
   ],
   "VpnGatewayId": "vgw-070087240d6fa2989"
  }
 ]
}
